# n

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-2-link
extras/templates/: default.md
nix/formatters/: default.nix
nix/shell/: default.nix
src/: cli.rs  document.rs  link.rs  lsp.rs  main.rs  path.rs  percent_encode.rs  pos.rs  query.rs  rank.rs  rope.rs  search.rs  template.rs  vault.rs
