[dependencies]
lexopt = "0.3.1"
nom = "8.0.0"
owo-colors = "4.2.1"
percent-encoding = "2.3.1"
petgraph = { version = "0.8.2", features = ["serde-1", "rayon"] }
proptest = "1.7.0"
pulldown-cmark = {version = "0.13.0", features = ["simd"]}
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = { version = "0.20.0", features = ["ansi"] }
thiserror = "2.0.12"
url = "2.5.4"
yaml-rust2 = "0.10.3"

[package]
name = "zk"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"
