[dependencies]
lazy_static = "1.5.0"
lexopt = "0.3.1"
nom = "8.0.0"
once_cell = "1.21.3"
owo-colors = "4.2.1"
percent-encoding = "2.3.1"
proptest = "1.7.0"
pulldown-cmark = {version = "0.13.0", features = ["simd"]}
rayon = "1.10.0"
regex = "1.11.1"
rust-stemmers = "1.2.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tabled = {version = "0.20.0", features = ["ansi"]}
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-std", "macros", "rt", "rt-multi-thread"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
yaml-rust2 = "0.10.3"

[package]
name = "n"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
